--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,23 @@
 <resources>
     <string name="app_name">SmartMediaGallery</string>
-    <string name="photo_removing_message">Do you really want to remove this photoItem?</string>
-    <string name="photo_removing_cancel_button">Cancel</string>
-    <string name="photo_removing_remove_button">Remove</string>
-    <string name="toast_photo_removed_message">The photoItem was removed</string>
-    <string name="media_removing_message">Do you really want to remove this item?</string>
-    <string name="media_removing_cancel_button">Cancel</string>
-    <string name="media_removing_remove_button">Remove</string>
-    <string name="toast_media_removed_message">The item was removed</string>
+
     <string name="menu_item_photo_title">Photo</string>
     <string name="menu_item_music_title">Music</string>
     <string name="menu_item_video_title">Video</string>
+
+    <string name="dialog_cancel_button">Cancel</string>
+
+    <string name="dialog_media_removing_message">Do you really want to remove this item?</string>
+    <string name="dialog_media_removing_remove_button">Remove</string>
+    <string name="toast_media_removed_message">The item was removed</string>
+
+    <string name="dialog_loading_title">Loading</string>
+    <string name="dialog_loading_pause_button">Pause</string>
+    <string name="dialog_loading_resume_button">Resume</string>
+    <string name="dialog_loading_filename_prefix_field">File: </string>
+    <string name="dialog_loading_progress_prefix_field">Loaded: </string>
+
+    <string name="toast_file_downloaded">File downloaded successfully</string>
+    <string name="toast_file_paused">Downloading paused</string>
+    <string name="toast_file_stopped">Downloading stopped</string>
 </resources>
